--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@koa/multer": "^3.0.0",
     "chalk": "^4.1.1",
     "dotenv": "^9.0.2",
     "http-errors": "^1.8.0",
@@ -12,6 +13,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^10.0.0",
+    "mime": "^2.5.2",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
