--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/multer": "^3.0.0",
+    "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "dotenv": "^9.0.2",
     "http-errors": "^1.8.0",
@@ -17,6 +18,7 @@
     "mime": "^2.5.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.2"
